Added database managment, migrations, and a login system
